Bug 1689562 - mozJSComponentLoader::Import should not store locations that failed to resolve. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D105367